--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
         <cucumber.version>5.7.0</cucumber.version>
         <allure_version>2.10.0</allure_version>
         <assertj-core.version>3.12.2</assertj-core.version>
+        <aspectj_version>1.9.6</aspectj_version>
         <rest-assured.version>4.0.0</rest-assured.version>
-        <jackson.version>2.9.9</jackson.version>
+        <jackson.version>2.12.1</jackson.version>
         <commons-lang3.version>3.9</commons-lang3.version>
         <aspectj.version>1.8.10</aspectj.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
@@ -65,41 +66,30 @@
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
-        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
-        <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>${javax.annotation-api.version}</version>
-        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <version>${jsonpath_version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.1</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -108,98 +98,8 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
 
-    <!--    <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>${failsafe.version}</version>
-                    <configuration>
-                        <enableProcessChecker>all</enableProcessChecker>
-                        <forkedProcessTimeoutInSeconds>9000</forkedProcessTimeoutInSeconds>
-                        <argLine>
-                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                        </argLine>
-                        <systemPropertyVariables>
-                            <project.name>DPS</project.name>
-                            <allure.report.directory>${allure.html.report.output}</allure.report.directory>
-                            <allure.results.directory>${allure.json.results.output}</allure.results.directory>
-                            <http.keepAlive>true</http.keepAlive>
-                            <sun.net.client.defaultConnectTimeout>10000</sun.net.client.defaultConnectTimeout>
-                            <sun.net.client.defaultReadTimeout>10000</sun.net.client.defaultReadTimeout>
-                            <sun.rmi.transport.tcp.responseTimeout>10000</sun.rmi.transport.tcp.responseTimeout>
-                        </systemPropertyVariables>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>integration-test</goal>
-                                <goal>verify</goal>
-                            </goals>
-                            <configuration>
-                                <rerunFailingTestsCount>3</rerunFailingTestsCount>
-                                <forkCount>${forkCount}</forkCount>
-                            </configuration>
-                        </execution>
-                    </executions>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.aspectj</groupId>
-                            <artifactId>aspectjweaver</artifactId>
-                            <version>${aspectj.version}</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${build.plugins.plugin.version}</version>
-                    <configuration>
-                        <encoding>UTF-8</encoding>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.sonarsource.scanner.maven</groupId>
-                    <artifactId>sonar-maven-plugin</artifactId>
-                    <version>${sonar-maven-plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>io.qameta.allure</groupId>
-                    <artifactId>allure-maven</artifactId>
-                    <version>${alluremaven.version}</version>
-                    <configuration>
-                        <resultsDirectory>${allure.json.results.output}</resultsDirectory>
-                        <reportDirectory>${allure.html.report.output}</reportDirectory>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <phase>post-integration-test</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                            <configuration>
-                                <resultsDirectory>${allure.json.results.output}</resultsDirectory>
-                                <reportDirectory>${allure.html.report.output}</reportDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>${exec_mavenplugin}</version>
-                    <configuration>
-                        <classpathScope>test</classpathScope>
-                        <mainClass>boots.uk.dps.report.Report</mainClass>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>-->
     <build>
         <plugins>
             <!-- Maven Surefire Plugin to execute Cucumber Features in Parallel -->
@@ -258,6 +158,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
+                        <argLine>
+                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj_version}/aspectjweaver-${aspectj_version}.jar"
+                        </argLine>
+                        <systemPropertyVariables>
+                            <allure.results.directory>target/allure-results</allure.results.directory>
+                        </systemPropertyVariables>
                         <suiteXmlFiles>
                             <suiteXmlFile>config/local-config.xml</suiteXmlFile>
                         </suiteXmlFiles>
@@ -276,7 +182,7 @@
                             </property>
                             <property>
                                 <name>cucumber.plugin</name>
-                                <value>json:target/cucumber-report.json
+                                <value>html:target/cucumber-report.json
                                 </value>
                             </property>
                             <property>
